# workshop_docker_jornadadados

./: Dockerfile  README.md  app.py  pyproject.toml
