[project]
name = "workshop-docker"
version = "0.1.0"
description = ""
authors = [
    {name = "vitorcoelhof",email = "vitorcoelhof@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.48.0,<2.0.0)",
    "plotly (>=6.2.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
